changed type generation, implementedd ttypescript, added automatic field select from swagger definition, added /character route
