# backend/src/Api/routes.ts
@@ -1,5 +1,8 @@
 import { CharacterCtrl } from './Controllers/Characters/Characters_ctrl';
 
-const routes = { getCharacters: CharacterCtrl.getCharacters };
+const routes = {
+  getCharacters: CharacterCtrl.getCharacters,
+  getCharacter: CharacterCtrl.getCharacter,
+};
 
 export default routes;
